--- a/skull.html
+++ b/skull.html
@@ -268,6 +268,7 @@
 		<div class="estimate">
 			<h2>Age Estimator</h2>
 			<p>Fusion of the pars squama to the pars petrosa</p>
+			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
@@ -297,7 +298,8 @@
 	<div class="col-lg-4">
 		<div class="estimate">
 			<h2>Age Estimator</h2>
-			<p>Sutura Mendosa closure:</p>
+			<p>Sutura Mendosa closure</p>
+			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
 			
 			<br><input type="button" value="Present" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
@@ -306,7 +308,8 @@
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<p>Fusion of the pars laterales to the pars squama:</p>
+			<p>Fusion of the pars laterales to the pars squama</p>
+			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year (can be up to 3)';">
 
@@ -317,7 +320,8 @@
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<p>Fusion of the pars basilaris to the pars laterales:</p>
+			<p>Fusion of the pars basilaris to the pars laterales</p>
+			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 5 years of age (can be upt to 7)';">
 
@@ -352,7 +356,8 @@
 	<div class="col-lg-4">
 		<div class="estimate">
 			<h2>Age Estimator</h2>
-			<p>Fusion of greater wings/pterygoid plates to the lesser wings/sphenoid body:</p>
+			<p>Fusion of greater wings/pterygoid plates to the lesser wings/sphenoid body</p>
+			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
@@ -360,8 +365,10 @@
 			
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			
-			<p>Closure of the spheno-occipital synchondrosis:</p>
+			<p>Closure of the spheno-occipital synchondrosis</p>
 			<p><small>*Note: this area of fusion is highly variable</small></p>
+			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
+
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 11 (females) or 13 (males) years of age';">
 			
@@ -389,7 +396,8 @@
 	<div class="col-lg-4">
 		<div class="estimate">
 			<h2>Age Estimator</h2>
-			<p>Closure of the mandibular sypmhysis:</p>
+			<p>Closure of the mandibular sypmhysis</p>
+			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
@@ -417,6 +425,8 @@
 		<div class="estimate">
 			<h2>Age Estimator</h2>
 			<p>Buttons and stuff</p>
+			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
+
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
 
