--- a/skull.html
+++ b/skull.html
@@ -235,17 +235,17 @@
 		<div class="estimate">
 			<h2>Age Estimator</h2>
 			
-			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
+			<p>Estimated Age Range:<input type="text" id="age-range" value1="" size=30></p>
 			
-			<p>Metopic Suture closure:</p>
+			<h3>Metopic Suture closure</h3>
 			
-				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
+				<br><input type="button" value1="Unfused" onclick="document.getElementById('age-range').value1='Less than 2 years of age';">
 
-				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2 - 4 years of age';">
+				<br><br><input type="button" value1="Fusing" onclick="document.getElementById('age-range').value1='Around 2 - 4 years of age';">
 
-				<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 4 years of age';">
+				<br><br><input type="button" value1="Complete Fusion" onclick="document.getElementById('age-range').value1='Older than 4 years of age';">
 			
-				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
+				<br><br><input type="button" value1="Clear Age Range" onclick="document.getElementById('age-range').value1='_';">
 			<br>
 		</div>
 	</div>
@@ -267,14 +267,14 @@
 	<div class="col-lg-4">
 		<div class="estimate">
 			<h2>Age Estimator</h2>
-			<p>Fusion of the pars squama to the pars petrosa</p>
-			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
+			<h3>Fusion of the pars squama to the pars petrosa</h3>
+			<p>Estimated Age Range:<input type="text" id="age-range" value2="" size=30></p>
 			
-			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value2='Less than 1 year of age';">
 
-			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
+			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value2='Older than 1 year of age';">
 			
-			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
+			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value2='_';">
 			<br>
 		</div>
 	</div>
@@ -299,37 +299,37 @@
 		<div class="estimate">
 			<h2>Age Estimator</h2>
 			<p>Sutura Mendosa closure</p>
-			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
+			<p>Estimated Age Range:<input type="text" id="age-range" value3="" size=30></p>
 			
-			<br><input type="button" value="Present" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<br><input type="button" value="Present" onclick="document.getElementById('age-range').value3='Less than 1 year of age';">
 
-			<br><br><input type="button" value="Absent/Complete" onclick="document.getElementById('age-range').value='Greater than 1 year';">
+			<br><br><input type="button" value="Absent/Complete" onclick="document.getElementById('age-range').value3='Greater than 1 year';">
 		
-			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
+			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value3='_';">
 			<br>
 			
-			<p>Fusion of the pars laterales to the pars squama</p>
-			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
+			<h3>Fusion of the pars laterales to the pars squama</h3>
+			<p>Estimated Age Range:<input type="text" id="age-range" value4="" size=30></p>
 			
-			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year (can be up to 3)';">
+			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value4='Less than 1 year (can be up to 3)';">
 
-			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Between 1 and 3 years of age';">
+			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value4='Between 1 and 3 years of age';">
 			
-			<br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 3 years of age';">
+			<br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value4='Older than 3 years of age';">
 		
-			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
+			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value4='_';">
 			<br>
 			
-			<p>Fusion of the pars basilaris to the pars laterales</p>
-			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
+			<h3>Fusion of the pars basilaris to the pars laterales</h3>
+			<p>Estimated Age Range:<input type="text" id="age-range" value=5"" size=30></p>
 			
-			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 5 years of age (can be upt to 7)';">
+			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value5='Less than 5 years of age (can be upt to 7)';">
 
-			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Between 5 and 7 years of age';">
+			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value5='Between 5 and 7 years of age';">
 			
-			<br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 7 years of age';">
+			<br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value5='Older than 7 years of age';">
 		
-			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
+			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value5='_';">
 			<br>
 			
 		</div>
