--- a/skull.html
+++ b/skull.html
@@ -239,13 +239,13 @@
 			
 			<h3>Metopic Suture closure</h3>
 			
-				<br><input type="button" value1="Unfused" onclick="document.getElementById('age-range').value1='Less than 2 years of age';">
+				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value1='Less than 2 years of age';">
 
-				<br><br><input type="button" value1="Fusing" onclick="document.getElementById('age-range').value1='Around 2 - 4 years of age';">
+				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value1='Around 2 - 4 years of age';">
 
-				<br><br><input type="button" value1="Complete Fusion" onclick="document.getElementById('age-range').value1='Older than 4 years of age';">
+				<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value1='Older than 4 years of age';">
 			
-				<br><br><input type="button" value1="Clear Age Range" onclick="document.getElementById('age-range').value1='_';">
+				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value1='_';">
 			<br>
 		</div>
 	</div>
