--- a/skull.html
+++ b/skull.html
@@ -231,13 +231,11 @@
 		</div>
 	</div>
 	
-	<div class="col-lg-4">
+	<div class="col-lg-2">
 		<div class="estimate">
 			<h2>Age Estimator</h2>
 			
-			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
-			
-			<h4>Metopic Suture closure</h4>
+			<h5>Metopic Suture closure</h5>
 			
 				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
 
@@ -249,6 +247,13 @@
 			<br>
 		</div>
 	</div>
+	
+	<div class="col-lg-2">
+		<div class="fixed">
+			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
+		</div>
+	</div>
+												       
 </section>
 
 <section class="container"> 
