--- a/skull.html
+++ b/skull.html
@@ -248,7 +248,7 @@
 		</div>
 	</div>
 	
-	<div class="col-lg-2">
+	<div class="col-sm-2">
 		<div class="fixed">
 			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
 		</div>
