--- a/skull.html
+++ b/skull.html
@@ -85,7 +85,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Skulls
+                <h1 class="page-header">Skull
                     <small>The Digital Age Estimator of Subadult Skeletons</small>
                 </h1>
             </div>
