--- a/skull.html
+++ b/skull.html
@@ -239,9 +239,7 @@
 	
 	<div class="col-lg-2">
 		<div class="estimate">
-			<h4>Age Estimator</h4>
-			
-			<h5>Metopic Suture closure</h5>
+			<h3>Metopic Suture closure</h3>
 			
 				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
 
@@ -268,12 +266,10 @@
 		</div>
 	</div>
 	
-	<div class="col-lg-4">
+	<div class="col-lg-2">
 		<div class="estimate">
-			<h4>Age Estimator</h4>
-			<h5>Fusion of the pars squama to the pars petrosa</h5>
-			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
-			
+			<h3>Fusion of the pars squama to the pars petrosa</h3>
+		
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
 			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
@@ -299,11 +295,9 @@
 		</div>
 	</div>
 	
-	<div class="col-lg-4">
+	<div class="col-lg-2">
 		<div class="estimate">
-			<h4>Age Estimator</h4>
-			<h5>Sutura Mendosa closure</h5>
-			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
+			<h3>Sutura Mendosa closure</h3>
 			
 			<br><input type="button" value="Present" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
@@ -312,8 +306,7 @@
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<h5>Fusion of the pars laterales to the pars squama</h5>
-			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
+			<h3>Fusion of the pars laterales to the pars squama</h3>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year (can be up to 3)';">
 
@@ -324,8 +317,7 @@
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<h5>Fusion of the pars basilaris to the pars laterales</h5>
-			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
+			<h3>Fusion of the pars basilaris to the pars laterales</h3>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 5 years of age (can be upt to 7)';">
 
@@ -357,11 +349,9 @@
 		</div>
 	</div>
 	
-	<div class="col-lg-4">
+	<div class="col-lg-2">
 		<div class="estimate">
-			<h4>Age Estimator</h4>
-			<h5>Fusion of greater wings/pterygoid plates to the lesser wings/sphenoid body</h5>
-			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
+			<h3>Fusion of greater wings/pterygoid plates to the lesser wings/sphenoid body</h3>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
@@ -396,11 +386,10 @@
 		</div>
 	</div>
 	
-	<div class="col-lg-4">
+	<div class="col-lg-2">
 		<div class="estimate">
 			<h4>Age Estimator</h4>
-			<h5>Closure of the mandibular sypmhysis</h5>
-			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
+			<h3>Closure of the mandibular sypmhysis</h3>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
@@ -424,12 +413,9 @@
 		</div>
 	</div>
 	
-	<div class="col-lg-4">
+	<div class="col-lg-2">
 		<div class="estimate">
-			<h4>Age Estimator</h4>
-			<p>Buttons and stuff</p>
-			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
-
+			<h3>Dentition age range stuff</h3>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
 
