--- a/skull.html
+++ b/skull.html
@@ -86,7 +86,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Skull
-                    <small>The Digital Age Estimator of Subadult Skeletons</small>
+                    <small>Fusion of cranial and mandibular elements</small>
                 </h1>
             </div>
         </div>
@@ -220,7 +220,7 @@
 		
 	<div class="col-md-2">
 		<div class="fixed">
-			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
+			<h2>Estimated Age Range:<input type="text" id="age-range" value="" size=30></h2>
 		</div>
 	</div>			
 </section>
