--- a/skull.html
+++ b/skull.html
@@ -239,7 +239,7 @@
 	
 	<div class="col-lg-2">
 		<div class="estimate">
-			<h3>Metopic Suture closure</h3>
+			<p><b>>Metopic Suture closure</b></p>
 			
 				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
 
@@ -268,7 +268,7 @@
 	
 	<div class="col-lg-2">
 		<div class="estimate">
-			<h3>Fusion of the pars squama to the pars petrosa</h3>
+			<p><b>Fusion of the pars squama to the pars petrosa</b></p>
 		
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
@@ -297,7 +297,7 @@
 	
 	<div class="col-lg-2">
 		<div class="estimate">
-			<h3>Sutura Mendosa closure</h3>
+			<p><b>Sutura Mendosa closure</b></p>
 			
 			<br><input type="button" value="Present" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
@@ -306,24 +306,24 @@
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<h3>Fusion of the pars laterales to the pars squama</h3>
+			<p><b>Fusion of the pars laterales to the pars squama</b></p>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year (can be up to 3)';">
 
 			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Between 1 and 3 years of age';">
 			
-			<br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 3 years of age';">
+			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 3 years of age';">
 		
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<h3>Fusion of the pars basilaris to the pars laterales</h3>
+			<p><b>Fusion of the pars basilaris to the pars laterales</b></p>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 5 years of age (can be upt to 7)';">
 
 			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Between 5 and 7 years of age';">
 			
-			<br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 7 years of age';">
+			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 7 years of age';">
 		
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
@@ -351,7 +351,7 @@
 	
 	<div class="col-lg-2">
 		<div class="estimate">
-			<h3>Fusion of greater wings/pterygoid plates to the lesser wings/sphenoid body</h3>
+			<p><b>Fusion of greater wings/pterygoid plates to the lesser wings/sphenoid body</b></p>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
@@ -359,9 +359,8 @@
 			
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			
-			<h5>Closure of the spheno-occipital synchondrosis</h5>
+			<p><b>Closure of the spheno-occipital synchondrosis</b></p>
 			<p><small>*Note: this area of fusion is highly variable</small></p>
-			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 11 (females) or 13 (males) years of age';">
 			
@@ -389,7 +388,7 @@
 	<div class="col-lg-2">
 		<div class="estimate">
 			<h4>Age Estimator</h4>
-			<h3>Closure of the mandibular sypmhysis</h3>
+			<p><b>Closure of the mandibular sypmhysis</b></p>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
@@ -415,7 +414,7 @@
 	
 	<div class="col-lg-2">
 		<div class="estimate">
-			<h3>Dentition age range stuff</h3>
+			<p><b>Dentition age range stuff</b></p>
 			
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
 
