--- a/skull.html
+++ b/skull.html
@@ -85,7 +85,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Skulls
+                <h1 class="page-header">Skull
                     <small>Fusion of cranial and mandibular elements</small>
                 </h1>
             </div>
@@ -220,7 +220,7 @@
 		
 	<div class="col-md-2">
 		<div class="fixed">
-			<h3>Estimated Age Range:<input type="text" id="age-range" value="" size=30></h3>
+			<h4>Estimated Age Range:<input type="text" id="age-range" value="" size=30></h4>
 		</div>
 	</div>			
 </section>
