--- a/skull.html
+++ b/skull.html
@@ -239,7 +239,7 @@
 	
 	<div class="col-lg-2">
 		<div class="estimate">
-			<p><b>>Metopic Suture closure</b></p>
+			<p><b>Metopic Suture closure</b></p>
 			
 				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
 
@@ -299,16 +299,16 @@
 		<div class="estimate">
 			<p><b>Sutura Mendosa closure</b></p>
 			
-			<br><input type="button" value="Present" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<input type="button" value="Present" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
 			<br><br><input type="button" value="Absent/Complete" onclick="document.getElementById('age-range').value='Greater than 1 year';">
 		
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<p><b>Fusion of the pars laterales to the pars squama</b></p>
+			<br><p><b>Fusion of the pars laterales to the pars squama</b></p>
 			
-			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year (can be up to 3)';">
+			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year (can be up to 3)';">
 
 			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Between 1 and 3 years of age';">
 			
@@ -317,9 +317,9 @@
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<p><b>Fusion of the pars basilaris to the pars laterales</b></p>
+			<br><p><b>Fusion of the pars basilaris to the pars laterales</b></p>
 			
-			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 5 years of age (can be upt to 7)';">
+			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 5 years of age (can be upt to 7)';">
 
 			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Between 5 and 7 years of age';">
 			
@@ -353,16 +353,16 @@
 		<div class="estimate">
 			<p><b>Fusion of greater wings/pterygoid plates to the lesser wings/sphenoid body</b></p>
 			
-			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
 			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
 			
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			
-			<p><b>Closure of the spheno-occipital synchondrosis</b></p>
+			<br><p><b>Closure of the spheno-occipital synchondrosis</b></p>
 			<p><small>*Note: this area of fusion is highly variable</small></p>
 			
-			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 11 (females) or 13 (males) years of age';">
+			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 11 (females) or 13 (males) years of age';">
 			
 			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
 			
@@ -390,7 +390,7 @@
 			<h4>Age Estimator</h4>
 			<p><b>Closure of the mandibular sypmhysis</b></p>
 			
-			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
+			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
 			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 1 year of age';">
 			
