--- a/skull.html
+++ b/skull.html
@@ -359,7 +359,7 @@
 			
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			
-			<br><p><b>Closure of the spheno-occipital synchondrosis</b></p>
+			<br><br><p><b>Closure of the spheno-occipital synchondrosis</b></p>
 			<p><small>*Note: this area of fusion is highly variable</small></p>
 			
 			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 11 (females) or 13 (males) years of age';">
