--- a/skull.html
+++ b/skull.html
@@ -439,7 +439,7 @@
 
             <div class="col-sm-3 col-xs-6">
                 <a href="thorax.html">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                    <img class="img-responsive portfolio-item" src="img/j-skel thorax.jpg" alt="">
                 </a>
             </div>
 
@@ -470,7 +470,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; J-Skel 2017</p>
                 </div>
             </div>
             <!-- /.row -->
