--- a/skull.html
+++ b/skull.html
@@ -439,25 +439,25 @@
 
             <div class="col-sm-3 col-xs-6">
                 <a href="thorax.html">
-                    <img class="img-responsive portfolio-item" src="img/j-skel thorax.jpg" alt="">
+                    <img class="img-responsive portfolio-item" src="img/j-skel thorax.pmg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="upper_limbs.html">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                    <img class="img-responsive portfolio-item" src="img/j-skel arm.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="pelvic_girdle.html">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                    <img class="img-responsive portfolio-item" src="img/j-skel pelvis.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="lower_limbs.html">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                    <img class="img-responsive portfolio-item" src="img/j-skelleg.png" alt="">
                 </a>
             </div>
 
