--- a/skull.html
+++ b/skull.html
@@ -239,13 +239,13 @@
 	
 	<div class="col-lg-2">
 		<div class="estimate">
-			<p><b>Metopic Suture closure</b></p>
+			<p><b>Metopic Suture</b></p>
 			
 				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
 
 				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2 - 4 years of age';">
 
-				<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 4 years of age';">
+				<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 4 years of age';">
 			
 				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
@@ -268,7 +268,7 @@
 	
 	<div class="col-lg-2">
 		<div class="estimate">
-			<p><b>Fusion of the pars squama to the pars petrosa</b></p>
+			<p><b>Fusion of pars squama to pars petrosa</b></p>
 		
 			<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
@@ -297,7 +297,7 @@
 	
 	<div class="col-lg-2">
 		<div class="estimate">
-			<p><b>Sutura Mendosa closure</b></p>
+			<p><b>Sutura Mendosa</b></p>
 			
 			<input type="button" value="Present" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
@@ -306,7 +306,7 @@
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<br><p><b>Fusion of the pars laterales to the pars squama</b></p>
+			<br><p><b>Fusion of pars laterales to pars squama</b></p>
 			
 			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year (can be up to 3)';">
 
@@ -317,7 +317,7 @@
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<br><p><b>Fusion of the pars basilaris to the pars laterales</b></p>
+			<br><p><b>Fusion of pars basilaris to pars laterales</b></p>
 			
 			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 5 years of age (can be upt to 7)';">
 
@@ -351,7 +351,7 @@
 	
 	<div class="col-lg-2">
 		<div class="estimate">
-			<p><b>Fusion of greater wings/pterygoid plates to the lesser wings/sphenoid body</b></p>
+			<p><b>Fusion of greater wings to lesser wings and body</b></p>
 			
 			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
@@ -359,7 +359,7 @@
 			
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			
-			<br><br><p><b>Closure of the spheno-occipital synchondrosis</b></p>
+			<br><br><p><b>Closure of spheno-occipital synchondrosis</b></p>
 			<p><small>*Note: this area of fusion is highly variable</small></p>
 			
 			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 11 (females) or 13 (males) years of age';">
@@ -387,8 +387,7 @@
 	
 	<div class="col-lg-2">
 		<div class="estimate">
-			<h4>Age Estimator</h4>
-			<p><b>Closure of the mandibular sypmhysis</b></p>
+			<p><b>Mandibular sypmhysis</b></p>
 			
 			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year of age';">
 
