--- a/skull.html
+++ b/skull.html
@@ -438,7 +438,7 @@
 
             <div class="col-sm-3 col-xs-6">
                 <a href="thorax.html">
-                    <img class="img-responsive portfolio-item" src="img/j-skel thorax.pmg" alt="">
+                    <img class="img-responsive portfolio-item" src="img/j-skel thorax.png" alt="">
                 </a>
             </div>
 
@@ -456,7 +456,7 @@
 
             <div class="col-sm-3 col-xs-6">
                 <a href="lower_limbs.html">
-                    <img class="img-responsive portfolio-item" src="img/j-skelleg.png" alt="">
+                    <img class="img-responsive portfolio-item" src="img/j-skel leg.png" alt="">
                 </a>
             </div>
 
