--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -228,25 +228,25 @@
 
             <div class="col-sm-3 col-xs-6">
                 <a href="skull.html">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
-                </a>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-                <a href="upper_limbs.html">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                    <img class="img-responsive portfolio-item" src="img/j-skel skulls.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="thorax.html">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                    <img class="img-responsive portfolio-item" src="img/j-skel thorax.png" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="upper_limb.html">
+                    <img class="img-responsive portfolio-item" src="img/j-skel arm.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="pelvic_girdle.html">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                    <img class="img-responsive portfolio-item" src="img/j-skel pelvis.png" alt="">
                 </a>
             </div>
 
@@ -259,7 +259,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; J-Skel 2017</p>
                 </div>
             </div>
             <!-- /.row -->
