--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -162,30 +162,30 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h3 class="page-header">Related Projects</h3>
+                <h3 class="page-header">Jump to a region</h3>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="skull.html">
+                    <img class="img-responsive portfolio-item" src="img/j-skel skulls.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="thorax.html">
+                    <img class="img-responsive portfolio-item" src="img/j-skel thorax.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="upper_limb.html">
+                    <img class="img-responsive portfolio-item" src="img/j-skel arm.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="lower_limb.html">
+                    <img class="img-responsive portfolio-item" src="img/j-skel leg.png" alt="">
                 </a>
             </div>
 
