--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -239,7 +239,7 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="upper_limb.html">
+                <a href="upper_limbs.html">
                     <img class="img-responsive portfolio-item" src="img/j-skel arm.png" alt="">
                 </a>
             </div>
