--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -178,13 +178,13 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="upper_limb.html">
+                <a href="upper_limbs.html">
                     <img class="img-responsive portfolio-item" src="img/j-skel arm.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="lower_limb.html">
+                <a href="lower_limbs.html">
                     <img class="img-responsive portfolio-item" src="img/j-skel leg.png" alt="">
                 </a>
             </div>
@@ -198,7 +198,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; J-Skel 2017</p>
                 </div>
             </div>
             <!-- /.row -->
