--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -453,7 +453,7 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <a href="lower_limb.html">
+                <a href="lower_limbs.html">
                     <img class="img-responsive portfolio-item" src="img/j-skel leg.png" alt="">
                 </a>
             </div>
