--- a/skull.html
+++ b/skull.html
@@ -227,7 +227,7 @@
 
 <section class="container"> 
 	<div class="col-lg-4"> 
-		<p>Pictures of frontal bone</p>
+		<img src="img/metopic.png" alt="Metopic Suture">
         </div>
             
 	<div class="col-lg-4">
