--- a/skull.html
+++ b/skull.html
@@ -255,7 +255,7 @@
 
 <section class="container"> 
 	<div class="col-lg-4"> 
-		<p>Pictures of temporal bone</p>
+		<img src="img/temporal - ecto.png" alt="Temporal bone">
         </div>
             
 	<div class="col-lg-4">
