--- a/skull.html
+++ b/skull.html
@@ -227,7 +227,7 @@
 
 <section class="container"> 
 	<div class="col-lg-4"> 
-		<img src="img/metopic.png" alt="Metopic Suture">
+		<img src="img/metopic.png" alt="Metopic Suture" style="height:100%; width:100%;">
         </div>
             
 	<div class="col-lg-4">
@@ -255,7 +255,7 @@
 
 <section class="container"> 
 	<div class="col-lg-4"> 
-		<img src="img/temporal - ecto.png" alt="Temporal bone">
+		<img src="img/temporal - ecto.png" alt="Temporal bone" style="height:100%; width:100%;">
         </div>
             
 	<div class="col-lg-4">
