--- a/skull.html
+++ b/skull.html
@@ -282,8 +282,8 @@
 	    
 <section class="container"> 
 	<div class="col-lg-4"> 
-		<img src="img/occip - ecto.png" alt="Perinatal occipital bones, ectocranial view" style="width:100%; height:100%;">
-		<img src="img/occip - endo.png" alt="Perinatal occipital bones, endocranial view" style="width:100%; height:100%;">
+		<img src="img/occipital - ecto.png" alt="Perinatal occipital bones, ectocranial view" style="width:100%; height:100%;">
+		<img src="img/occipital - endo.png" alt="Perinatal occipital bones, endocranial view" style="width:100%; height:100%;">
         </div>
             
 	<div class="col-lg-4">
