--- a/skull.html
+++ b/skull.html
@@ -228,6 +228,7 @@
 <section class="container"> 
 	<div class="col-lg-4"> 
 		<img src="img/metopic.png" alt="Metopic Suture" style="width:100%; height:100%;">
+		<h6>Unfused frontal bones of a perinatal individual.</h6>
         </div>
             
 	<div class="col-lg-4">
