--- a/skull.html
+++ b/skull.html
@@ -256,7 +256,8 @@
 
 <section class="container"> 
 	<div class="col-lg-4"> 
-		<img src="img/temporal - ecto.png" alt="Temporal bone" style="width:100%; height:100%;">
+		<img src="img/pics/temporal-ecto.png" alt="Temporal bone" style="width:100%; height:100%;">
+		<h6>Lateral and ectocranial view of a right temporal bone from a perinate showing the nearly obliterated line of fusion between the pars squama and the pars petrosa.</h6>
         </div>
             
 	<div class="col-lg-4">
