--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12" id="head">
-                <h1 class="page-header">J-Skel
+                <h1 class="page-header">J-Skels
                     <small>The Digital Age Estimator of Subadult Skeletons</small>
                 </h1>
             </div>
