--- a/skull.html
+++ b/skull.html
@@ -212,8 +212,7 @@
                     	</ul> 
 		    <ol>
                     <li>Compare the bone/element you have to the quick description of aging methods provided for that specific bone.</li>
-		    <li>Select the level of fusion or development for the bone provided in the <b>Age Estimator</b>box.</li>
-		    <li>Hit "Save Age Range" if you wish to look at another bone or element</li>
+		    <li>Select the level of fusion or development for the bone provided in the <b>Age Estimator</b> box to receive an age estimation.</li>
 		    </ol>
 		    </div>
 		</div>
