--- a/skull.html
+++ b/skull.html
@@ -346,17 +346,16 @@
 	<div class="col-lg-4"> 
 	<div class="photo">
 		<img src="img/pics/sphenoid.png" alt="Perinatal sphenoid" style="width:100%; height:100%;">
+		<img src="img/pics/bu19.png" alt="spheno-occipital synchondrosis" style="width:100%; height:100%">
 		</div>
         </div>
             
 	<div class="col-lg-3">
 		<div class="description">
 		<h2><a name="sphenoid1">The Sphenoid</a></h2>
-			<p>The sphenoid is another bone with multiple ossification centers that appear in fetal life.  Although there are at least five centers that ossify in utero, fusion of some of these occurs before birth (CITATIONS).</p>
-			<p>By birth some of them have already fused and normally three are present: (1) the body and lesser wings and (2) a right and a left greater wing fused to the pterygoid plates (CITATIONS).</p>
-			<p>The body and lesser wings make up the midline features that are also mostly endocranial while the lesser wings contribute ectocranially to the area beside and behind the eyes informally called the "temples".  Additionally, the pterygoid plates that are fused to the lesser wings by birth contribute to endocranially as well.</p>
-			<p>Even though these separate ossification centers are highly complex in form and function, they are all normally fused together during the first year of life.</p>
-			<p>The spenoid also contributes to the spheno-occipital synchondrosis, as discussed above in the occipital bone section.  This surface faces posteriorly and fuses with the basilar portion of the occipital bone.  Fusion of these two surfaces occurs within a wide time-frame and can also be contigent upon the sex of the individual.  Generally, these fuse earlier in females (between 11 and 16 years of age) than in males (between 13 and 18 years of age), but this is variable (CITATIONS).</p>
+			<p>The sphenoid is another bone with multiple ossification centers that appear in fetal life, yet fusion of some of these occurs before birth (CITATIONS).</p>
+			<p>By birth, three centers are normally present: (1) the body and lesser wings and (2) a right and a left greater wing fused to the pterygoid plates (CITATIONS).  Even though these separate ossification centers are highly complex in form and function, they are all normally fused together during the first year of life.</p>
+			<p>The spenoid also contributes to the spheno-occipital synchondrosis. This surface fuses with the basilar portion of the occipital bone.  Fusion of these two surfaces occurs within a wide time-frame and can also be contigent upon the sex of the individual.  Generally, these fuse earlier in females (between 11 and 16 years of age) than in males (between 13 and 18 years of age), but this is variable (CITATIONS).</p>
 			
 		</div>
 	</div>
@@ -374,9 +373,9 @@
 			<br><br><p><b>Closure of spheno-occipital synchondrosis</b></p>
 			<p><small>*Note: this area of fusion is highly variable</small></p>
 			
-			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 11 (females) or 13 (males) years of age';">
+			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 11 (f) or 13 (m) years of age';">
 			
-			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 16 (females) and 18 (males) years of age';">
+			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 16 (f) and 18 (m) years of age';">
 			
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			
