--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -32,25 +32,6 @@
 			fill: #979797;
 			transform:scale (1.2); 
 			}
-		myBtn {
-  			display: none;
-  			position: fixed;
-  			bottom: 20px;
-  			right: 30px;
-  			z-index: 99;
-  			border: none;
-  			outline: none;
-  			background-color: black;
-  			color: white;
-  			cursor: pointer;
-  			padding: 15px;
-  			border-radius: 10px;
-			}
-
-		myBtn:hover {
-  			background-color: #555;
-			}
-		
 	</style>
    
 
@@ -127,7 +108,7 @@
             <div class="col-lg-7">
 		<?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Inkscape (http://www.inkscape.org/) -->
-<svg width="109.9mm" height="99.823mm" version="1.1" viewBox="0 0 109.89867 99.822663" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg width="100%" height="100%" version="1.1" viewBox="0 0 109.89867 99.822663" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:xlink="http://www.w3.org/1999/xlink">
  <metadata>
   <rdf:RDF>
    <cc:Work rdf:about="">
